roots/css/main.css
/*main*/

    body {
        font-family: 'Roboto Mono', monospace;
        background-color:  #10100F;
        color: rgba(255, 255, 255, 0.4);
        /*overflow: auto;*/

        background-image: url( '../images/bgs/bg.svg' );
        background-repeat: no-repeat;
        background-size: 360% 175%;
        background-attachment: fixed;
        background-position: 4%;

        text-align: center;
        font-size: 20px;
    }

    button {
        font-family: 'Roboto Mono', monospace;
    }

    #icon {
        float: left;

        padding-top: 1%;
        width: 50px;
        height: 50px;
        
        transition-timing-function:cubic-bezier(0.165, 0.84, 0.44, 1);
        transition-duration: .5s;
    }

    #icon:hover {
        transform: rotate(20deg);
        margin-left: 8px;
    }

    #logo {
        width: 80%;
        margin-bottom: 10%;

        transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
        transition-duration: .5s;
        filter: drop-shadow(0rem 0rem 0rem black);
    }

    #logo:hover {
        width: 90%;
        margin-bottom: 6.5%;
        filter: drop-shadow(.5rem .5rem 1rem black)
    }
    
    #page {
        width: 80%;
        margin-left: 20%;
        margin-top: 100px;
        
    }

    #sortlist {
        display: block;
        table-layout: fixed;
        list-style-type: disc;
        padding: 0px;
    }
    
    .trail { /*cursor trail class*/
        background-color: rgba(255, 255, 255, 0.05);
        height: 30px;
        width: 30px;
        margin-top: -15px;
        margin-left: -15px;
        position: absolute;

        border-radius: 10px;
        
        pointer-events: none;
        z-index: 69 /*lmao*/;

        -webkit-animation: rotating 8s linear infinite;
      -moz-animation: rotating 8s linear infinite;
      -ms-animation: rotating 8s linear infinite;
      -o-animation: rotating 8s linear infinite;
      animation: rotating 8s linear infinite;
    }

    /*navbar*/

    #topnav-div {
      background: linear-gradient(50deg, rgba(6,6,5,1) 0%, rgba(46,43,40,1) 100%); 
      width:100%;
  
      position: fixed;
      float: top;
      top: 0px;
  
      border-radius: 10px;
      /*overflow: auto;*/
      
      z-index: 68 /* sadge */;
  }
  
  #topnav-list {
      margin: 10px;
      float: left;
  }
  
  #topnav-button {
      background: linear-gradient(50deg, rgba(46,43,40,0.5) 0%, rgba(16,16,15,0.5) 100%);
      color: white;
      font-size: 15px;
  
      margin-top: 5px;
      margin-bottom: 5px;
      margin-left: 20px;
      padding: 12px;
  
      transform: rotate(0deg);
      border: none;
      border-radius: 10px;
  
      transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
      transition-duration: .5s;
  }
  
  #topnav-button:hover {
      background: #F06520;
      font-size: 18px;
  
      margin-top: 2px;
      margin-bottom: 2px;
      margin-left: 17px;
      padding: 10px;
  
      transform: rotate(-4deg);
  
      text-shadow:
      0 1px #121211,
      -1px 0 #121211,
      -1px 2px #121211,
      -2px 1px #121211,
      -2px 3px #121211,
      -3px 2px #121211,
      -3px 4px #121211,
      -4px 3px #121211,
      -4px 5px #121211,
      -5px 4px #121211,
      -5px 6px #121211,
      -6px 5px #121211,
      -6px 7px #121211,
      -7px 6px #121211,
      -7px 8px #121211,
      -8px 7px #121211;
  }
  
  #listnavbar #btnnavbar {
      color: white;
      float: left;
      display: block;
      text-align: center;
      text-decoration: bold;
  }

  /*gameslist, sidebar*/
  #gamelist {
    background-color: rgba(16,16,15,0.6);
    width: 20%;
    left: 0px;
    top: 55px; 

    display: block;
    position: fixed;

    z-index: 67;
}

#gamebutton {
    background-color: transparent;
    color: white;
    /*overflow: visible;*/
    font-size: 25px;
    width: 100%;
    
    border: none;

    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
    transition-duration: .5s;
}

hr /*divider between game buttons*/ {
    padding: 0px;
    margin: 0px;
    margin-top: 2px;
    margin-left: 10%;
    margin-right: 10%;

    border: 2px solid rgba(116, 116, 106, 0.2);
    border-radius: 4px;

    transition-timing-function: ease-in-out;
    transition-duration: .15s;
}

#buttondiv {
    height: fit-content;
    /*overflow: visible;*/

    transition-timing-function: ease-in-out;
    transition-duration: .3s;
    transition-delay: .25s;
}

#thumbnail {
    width: 90%;
    height: 0;
    margin: auto;
    margin-top: 0px;

    transform: scaleY(0);
    transform: translateX(0px);

    border-radius: 10px;
    transition-timing-function: ease-in-out;
    transition-duration: .8s;
    transition-delay: 0s;
}

/* */
#buttondiv:hover #gamebutton {
  font-size: 35px;
}

#buttondiv:hover {
    padding-bottom: 10px;
    transition-delay: 0s;
}

#buttondiv:hover hr {
  border: 3px solid rgba(255, 255, 255, 0.4);
  margin-left: 6%;
  margin-right: 6%;
}

#thumbnail:hover {
    width: 120%;
    position: relative;
  
    filter: drop-shadow(.5rem .5rem 1rem black);
    transform: translateX(10px);
    
    z-index: 420;
    
    transition-delay: .4s;
}


#buttondiv:hover #thumbnail {
    margin-top: 6px;

    height: auto;
    transform: scaleY(1);

    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
    transition-duration: .8s;
}

/*button classes*/
.orig {}
.expi {}
.cool {}
.mous {}
.user {}
/*REMINDER TO MAKE THESE DO THINGS AT SOME POINT*/

/*animations*/
 @-webkit-keyframes scalevertop {
    0% {
      -webkit-transform: scaleY(0.4);
              transform: scaleY(0.4);
      -webkit-transform-origin: 100% 0%;
              transform-origin: 100% 0%;
    }
    100% {
      -webkit-transform: scaleY(1);
              transform: scaleY(1);
      -webkit-transform-origin: 100% 0%;
              transform-origin: 100% 0%;
    }
  }
  @keyframes scalevertop {
    0% {
      -webkit-transform: scaleY(0.4);
              transform: scaleY(0.4);
      -webkit-transform-origin: 100% 0%;
              transform-origin: 100% 0%;
    }
    100% {
      -webkit-transform: scaleY(1);
              transform: scaleY(1);
      -webkit-transform-origin: 100% 0%;
              transform-origin: 100% 0%;
    }
  }
  
  
@-webkit-keyframes rotating /*used for the mouse cursor*/ {
  from {
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes rotating {
  from {
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -ms-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

